Implementação dos métodos excluir, confirmar e atualizar
