# src/main/java/br/com/rodolfo/teste/backend/controller/ClienteController.java
@@ -2,6 +2,7 @@ package br.com.rodolfo.teste.backend.controller;
 
 import br.com.rodolfo.teste.backend.business.ClienteService;
 import br.com.rodolfo.teste.backend.domain.Cliente;
+import br.com.rodolfo.teste.backend.exception.BusinessException;
 import br.com.rodolfo.teste.backend.mapper.ClienteMapper;
 import br.com.rodolfo.teste.backend.repository.ClienteRepository;
 import com.rodolfo.teste.backend.api.ClienteApi;
@@ -30,47 +31,77 @@ public class ClienteController implements ClienteApi {
 
 
     @Override
-    public ResponseEntity<ClienteRepresentation> cadastrar(@Valid ClienteRepresentation body) {
+    public ResponseEntity cadastrar(@Valid ClienteRepresentation body) {
         log.info("cadastrar");
-        Cliente novo = this.service.novo(mapper.mapper(body));
+        Cliente novo = null;
+        try {
+            novo = this.service.novo(mapper.mapperToDomain(body));
+        } catch (BusinessException e) {
+            return ResponseEntity.badRequest().body(new ClientApiResponseRepresentation()
+                    .code(400)
+                    .message(e.getMessage()));
+        }
         return ResponseEntity.created(URI.create("http://localhost:8080/v1/cliente/" + novo.getId())).build();
     }
 
     @Override
-    public ResponseEntity<ClienteRepresentation> getClientById(Long clienteId) {
-        log.info("getClientById: {}", clienteId);
+    public ResponseEntity getClientById(Long clienteId) {
+        log.info("getClientById: [{}]", clienteId);
 
         try {
-            final Optional<Cliente> optionalCliente = service.recuperarClienteById(clienteId);
-            return ResponseEntity.ok(mapper.mapperToRepresentation(optionalCliente.orElseThrow()));
+            final Optional<Cliente> optionalCliente = service.obterPorId(clienteId);
+
+            if (optionalCliente.isEmpty()) {
+                return ResponseEntity.notFound().build();
+            }
+
+            return ResponseEntity.ok(mapper.mapperToRepresentation(optionalCliente.get()));
+
+        } catch (BusinessException e) {
+            return ResponseEntity.badRequest().body(new ClientApiResponseRepresentation()
+                    .code(422)
+                    .message(e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(500).body(new ClientApiResponseRepresentation().message(e.getMessage()));
         }
     }
 
     @Override
     public ResponseEntity<ClientApiResponseRepresentation> excluir(Long clienteId) {
-        log.info("excluir: [clienteId]");
+        log.info("excluir: [{}]", clienteId);
 
-        service.excluir(clienteId);
+        try {
+            service.excluir(clienteId);
+
+            return ResponseEntity.ok(new ClientApiResponseRepresentation()
+                    .code(200)
+                    .message("Cliente deletado com sucesso!"));
+
+        } catch (BusinessException e) {
+            return ResponseEntity.badRequest().body(new ClientApiResponseRepresentation()
+                    .code(400)
+                    .message(e.getMessage()));
+        }
+
+    }
+
+    @Override
+    public ResponseEntity confirmar(Long clienteId) {
+
+        service.confirmar(clienteId);
 
         return ResponseEntity.ok(new ClientApiResponseRepresentation()
                 .code(200)
-                .message("Cliente deletado com sucesso!"));
+                .message("Confirmação realizada com sucesso!"));
     }
 
-    //    @Override
-//    public ResponseEntity<Void> confirmar(Long clienteId) {
-//        return null;
-//    }
-//
-//    @Override
-//    public ResponseEntity<ClientApiResponse> excluir(Long clienteId) {
-//        return null;
-//    }
-//
-//    @Override
-//    public ResponseEntity<Cliente> getClientById(Long clienteId) {
-//        return null;
-//    }
+    @Override
+    public ResponseEntity<ClientApiResponseRepresentation> atualizar(Long clienteId, @Valid ClienteRepresentation body) {
+
+        service.atualizar(mapper.mapperToDomain(body));
+
+        return ResponseEntity.ok(new ClientApiResponseRepresentation()
+                .code(200)
+                .message("Cliente atualizado com sucesso!"));
+    }
 }
